# matsuzawa-20260313-2

./: pyproject.toml
.research/: research_history.json
.research/results/: stdout.txt
.research/results/comparison/: aggregated_metrics.json
config/: config.yaml
config/run/: comparative-1-zero-shot-cot.yaml  comparative-1.yaml  proposed-ac-cot.yaml  proposed.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
