# Please list the required python packages.

[project]
name = "matsuzawa-20260313-2"
version = "0.1.0"
description = "AC-CoT prompt tuning experiment on GSM8K"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "wandb>=0.16.0",
    "datasets>=2.16.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
]