[project]
name = "matsuzawa-ac-cot"
version = "0.1.0"
description = "Abstract-then-Compact Chain-of-Thought experiments on GSM8K"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.0",
    "wandb>=0.16.0",
    "datasets>=2.14.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7.0",
    "together>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [VALIDATOR FIX - Attempt 1]
# [PROBLEM]: Build failed with "ValueError: Unable to determine which files to ship inside the wheel"
# [CAUSE]: Hatchling could not find package directory matching project name (matsuzawa_ac_cot)
# [FIX]: Add [tool.hatch.build.targets.wheel] section to specify src/ as the package location
#
# [OLD CODE]:
# (no build configuration present)
#
# [NEW CODE]:
[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
